# PPOIS2

lab1/: README.md  main.py  pyproject.toml  structure.txt
lab1/studio/: exceptions.py  movie_studio.py  people.py  production.py  resources.py
lab1/tests/: test_movie_studio.py  test_people.py  test_production.py  test_resources.py
lab2/: .gitignore  README.md  main.py  structure.txt
lab2/core/controllers/: paginator.py
lab2/core/models/: repostitory.py
lab2/core/views/: components.py  dialogs.py  main_window.py
lab2/data/: patients_primary.xml  patients_secondary.xml
