[project]
name = "lab1"
version = "0.1.0"
description = "Система моделирования киностудии"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "pytest-cov==4.1.0",
    "mypy==1.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=studio --cov-report=term-missing"

[tool.coverage.run]
source = ["studio"]